--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Bolg Image Hosting</title>
+    <title>Blog Image Hosting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="https://sm.ms/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
-    <script src="jquery-3.4.1.min.js"></script>
-    <script src="https://sm.ms/js/fileinput.min.js" type="text/javascript"></script>
-    <script src="bootstrap.min.js"></script>
+    <link href="https://sm.ms//css/bootstrap.min.css?v=20180421" rel="stylesheet">
+    <link href="https://sm.ms//css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="https://cdnjs.loli.net/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://sm.ms//js/fileinput.min.js" type="text/javascript"></script>
+    <script src="https://sm.ms//js/fileinput_locale_zh.js" type="text/javascript"></script>
+    <script src="https://cdnjs.loli.net/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
     <style>
         html {
           position: relative;
@@ -56,21 +57,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">SM.MS</a>
+                <a class="navbar-brand" href="/">许博的博客</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Home</a></li>
                     <li ><a href="/about/">About</a></li>
-                    <li ><a href="/contact/">Contact</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li ><a href="/changelog/">Change Log</a></li>
-                    <li ><a href="/doc/">API</a></li>
-					<li><a href="https://sa.net/">100% SSD VPS Server</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
+            </div>
+        </div>
     </nav>
     <div class="container kv-main">
 
@@ -163,10 +158,5 @@ $('#smfile').on('fileuploaded', function(event, data, previewId, index) {
 });
 </script>
     </div>
-    <footer class="footer">
-        <div class="container">
-	<p class="text-muted">Copyright &#9400; 2019 SB Professional Services, LLC. All rights reserved. 请勿上传违反中国大陆和香港法律的图片，违者后果自负. 赞助商： <a href="https://sa.net/cn/">中国大陆直连 VPS，5 折优惠码 SMMS</a></p>
-        </div>
-    </footer>
 </body>
 </html>
