--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 padding: 60px 15px 0;
             }
             .footer {
-                position: absolute;
+                /* position: absolute; */
                 bottom: 0;
                 width: 100%;
                 height: 60px;
@@ -68,7 +68,7 @@
     <script>
         $("#file-upload").fileinput({
             language: 'zh',
-            uploadUrl: "/jack",  //上传地址
+            uploadUrl: "http://127.0.0.1:8081/upload",  //上传地址
             allowedFileExtensions : ['jpeg', 'jpg', 'png', 'gif', 'bmp'],
         });
 
