--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 padding: 60px 15px 0;
             }
             .footer {
-                /* position: absolute; */
+                position: absolute;
                 bottom: 0;
                 width: 100%;
                 height: 60px;
@@ -55,26 +55,26 @@
                 </div>
             </form>
         </div>
-    </body>
 
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted">
-                Copyright Ⓒ 2019 许博的博客. All rights reserved
-            </p>
-        </div>
-    </footer>
+        <footer class="footer">
+            <div class="container">
+                <p class="text-muted">
+                    Copyright Ⓒ 2019 许博的博客. All rights reserved
+                </p>
+            </div>
+        </footer>
 
-    <script>
-        $("#file-upload").fileinput({
-            language: 'zh',
-            uploadUrl: "http://127.0.0.1:8081/upload",  //上传地址
-            allowedFileExtensions : ['jpeg', 'jpg', 'png', 'gif', 'bmp'],
-        });
-
-        $("#file-upload").on("fileuploaded", function(event, data, previewId, index) {
-            console.log(data.id);
-            alert("success");
-        });
-    </script>
+        <script>
+            $("#file-upload").fileinput({
+                language: 'zh',
+                uploadUrl: "http://127.0.0.1:8081/upload",  //上传地址
+                allowedFileExtensions : ['jpeg', 'jpg', 'png', 'gif', 'bmp'],
+            });
+    
+            $("#file-upload").on("fileuploaded", function(event, data, previewId, index) {
+                console.log(data.id);
+                alert("success");
+            });
+        </script>
+    </body> 
 </html>
