--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             }
             .footer {
                 position: absolute;
-                bottom: 0;
+                margin-top: 50px;
                 width: 100%;
                 height: 60px;
                 background: #f5f5f5;
@@ -55,15 +55,14 @@
                 </div>
             </form>
 
-            <div id="showurl" style="display: none;">
-                <ul id="navTab" class="nav nav-tabs">
-                    <li class="active"><a href="#markdowncodes" data-toggle="tab">Markdown</a></li>
-                </ul>
+            <div id="showurl" class="invisible">
+                <h3 id="markdowncodes">Markdown</h3>
                 <div id="navTabContent" class="tab-content">
                     <div class="alert alert-secondary" id="markdowncodes">
                         <pre style="margin-top: 5px;"><code id="markdown"></code></pre>
                     </div>
                 </div>
+                
             </div>
         </div>
 
@@ -84,7 +83,7 @@
     
             $("#file-upload").on("fileuploaded", function(event, data, previewId, index) {
                 if(data.response.code == 'OK') {
-                    $("#showurl").show();
+                    $("#showurl").toggleClass("invisible");
                     $('#markdown').append("!["+ data.response.filename +"](" + data.response.url + ")" + "\n");
                 }
             });
