--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <script>
             $("#file-upload").fileinput({
                 language: 'zh',
-                uploadUrl: "http://127.0.0.1:8081/upload",  //上传地址
+                uploadUrl: "/upload",  //上传地址
                 allowedFileExtensions : ['jpeg', 'jpg', 'png', 'gif', 'bmp'],
             });
     
